--- a/Online_razmjena/Views/Shared/_postThumbnail.cshtml
+++ b/Online_razmjena/Views/Shared/_postThumbnail.cshtml
@@ -4,7 +4,7 @@
     @if (!String.IsNullOrEmpty(Model.Image))
     {
         var image_path = $"/Image/{Model.Image}";
-        <img src="@image_path" width="338" height="200" />
+        <img src="@image_path"  height="200"  />
     }
     
     <div class="card-body">
