--- a/Online_razmjena/Views/Slicice/Index.cshtml
+++ b/Online_razmjena/Views/Slicice/Index.cshtml
@@ -21,7 +21,7 @@
         <span class="font-weight-bold">Broj Sličice: </span>&nbsp;&nbsp;
         @Html.TextBox("broj")
         <div class="input-group-append">
-            <button class="btn btn-primary" type="submit">Search</button>
+            <button class="btn btn-primary" type="submit">Traži</button>
         </div>
     </div>
 
