--- a/Online_razmjena/Views/Slicice/Edit.cshtml
+++ b/Online_razmjena/Views/Slicice/Edit.cshtml
@@ -22,6 +22,9 @@
                 <input asp-for="Korisnik" hidden class="form-control" />
             </div>
             <div class="form-group">
+                <input asp-for="Filter" hidden class="form-control" />
+            </div>
+            <div class="form-group">
                 <input asp-for="CreatedOn" hidden class="form-control" />
             </div>
             <div class="form-group">
